<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/customizePlayer1Button"
            android:layout_width="157dp"
            android:layout_height="150dp"
            android:layout_marginStart="35dp"
            android:backgroundTint="@color/dark_green"
            android:text="@string/customizePlayer1" />

        <Button
            android:id="@+id/customizePlayer2Button"
            android:layout_width="157dp"
            android:layout_height="150dp"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/dark_green"
            android:text="@string/customizePlayer2" />
    </LinearLayout>

    <Button
        android:id="@+id/customizeGameButton"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="65dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/customizeGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="266dp"
        android:layout_height="109dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/red"
        android:text="@string/play"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/customizeGameButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/customizeGameButton"
        app:layout_constraintTop_toBottomOf="@+id/customizeGameButton" />

    <Button
        android:id="@+id/button"
        android:layout_width="101dp"
        android:layout_height="55dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/white"
        android:text="@string/exit"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/playButton"
        app:layout_constraintStart_toStartOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

</androidx.constraintlayout.widget.ConstraintLayout>